changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Make singing and oratory skills work against multi-tiled monsters.
Andreas Kirschbaum 2009-06-20

Retain unaggressive flag for splitting monsters.
Andreas Kirschbaum 2009-06-19

Prevent black puddings from jumping over walls.
Andreas Kirschbaum 2009-06-19

Insert dropped objects below the player.
Andreas Kirschbaum 2009-06-18

Allow monsters to pick up "throwable" items as weapons.
Andreas Kirschbaum 2009-06-18

Change weight check for monsters in object_get_pick(): replace
"item_weight <= picker_weight/3" with
"total_picker_weight does not exceed get_weight_limit(picker)". This allows
hill giants to pick up boulders and prevents vampires from carrying unlimited
weight.
Andreas Kirschbaum 2009-06-17

Allow monsters to apply items even if they do not know the needed skill.
Requiring the appropriate can_xxx flag is good enough.
Andreas Kirschbaum 2009-06-17

Add shopitems type 'none' matching items with 'type 0'. Prevents some error
messages in the server log.
Andreas Kirschbaum 2009-06-17

Fix monsters applying items generated from treasure lists: do not apply items
before all treasures have been created. Without this fix applying of weapons
did sometimes fail because the needed skill was generated after the weapon.
Andreas Kirschbaum 2009-06-17

Include "hostile" attribute in (pk) messages.
Andreas Kirschbaum 2009-06-16

Fix owner check ("The weapon does not recognize you as its owner.") for bows
and character names which are a prefix of the owner's name.
Andreas Kirschbaum 2009-06-16

Fix incorrect experience calculation when disarming traps/runes as
reported by Alex Tokar.